Bug 1257211: Exit early if already shutting down. r=gerald

MozReview-Commit-ID: 1Oi4m2AIByw